force-app/main/default/objects/Case/fields/CAS_Actif__c.field-meta.xml
<CustomField>
    <fullName>CAS_Actif__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Equipement client associé à la requête.</description>
    <label>Equipement</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Asset.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Requêtes</relationshipLabel>
    <relationshipName>Requ_tes</relationshipName>
    <type>Lookup</type>
</CustomField>