force-app/main/default/objects/Case/fields/CAS_AgenceRegionaleBW__c.field-meta.xml
<CustomField>
    <fullName>CAS_AgenceRegionaleBW__c</fullName>
    <formula>CASE(CreatedBy.USER_AgenceRegionaleBW__c, &quot;1&quot;, &quot;Centre Paris Nord&quot;,&quot;2&quot;,&quot;Ouest&quot;,&quot;3&quot;,&quot;Est&quot;,&quot;4&quot;,&quot;Sud-Ouest&quot;,&quot;5&quot;,&quot;Sud-Est et Corse&quot;,&quot;6&quot;,&quot;Export&quot;,&quot;7&quot;,&quot;Interco&quot;,&quot;Agence régionale BW non spécifiée sur l&apos;utilisateur&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agence régionale BW</label>
    <type>Text</type>
</CustomField>