force-app/main/default/objects/Case/fields/CAS_Commande__c.field-meta.xml
<CustomField>
    <fullName>CAS_Commande__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commande</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Requêtes</relationshipLabel>
    <relationshipName>Interventions</relationshipName>
    <type>Lookup</type>
</CustomField>