force-app/main/default/objects/Case/fields/CAS_ContratdeService__c.field-meta.xml
<CustomField>
    <fullName>CAS_ContratdeService__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contrat associé à l’actif.</description>
    <label>Contrat d&apos;assistance technique</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>ServiceContract.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ServiceContract</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>