force-app/main/default/objects/Case/fields/CAS_EtapeDeTraitement__c.field-meta.xml
<CustomField>
    <fullName>CAS_EtapeDeTraitement__c</fullName>
    <label>Etape de traitement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En attente de commande</fullName>
            </value>
            <value>
                <fullName>En attente d&apos;intervention</fullName>
            </value>
            <value>
                <fullName>Réaliser un devis</fullName>
            </value>
            <value>
                <fullName>En attente d&apos;informations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>