force-app/main/default/objects/Case/fields/CAS_Imputation__c.field-meta.xml
<CustomField>
    <fullName>CAS_Imputation__c</fullName>
    <label>Imputation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contrat</fullName>
            </value>
            <value>
                <fullName>Garantie</fullName>
            </value>
            <value>
                <fullName>Commande</fullName>
            </value>
            <value>
                <fullName>Courtoisie</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>