force-app/main/default/objects/Case/fields/CAS_ModalitedIntervention__c.field-meta.xml
<CustomField>
    <fullName>CAS_ModalitedIntervention__c</fullName>
    <description>Permet d&apos;indiquer si l&apos;actif est couvert par une garantie ou un contrat.</description>
    <label>Modalité d&apos;intervention</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equipement sous-garantie</fullName>
            </value>
            <value>
                <fullName>Equipement hors-garantie</fullName>
            </value>
            <value>
                <fullName>Equipement sous-contrat</fullName>
                <isActive>false</isActive>
                <label>Equipement sous-contrat</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>