force-app/main/default/objects/Case/fields/CAS_SousType__c.field-meta.xml
<CustomField>
    <fullName>CAS_SousType__c</fullName>
    <description>Sous catégorie du type permettant de préciser la nature de la requête.</description>
    <label>Sous-type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Panne Totale</fullName>
            </value>
            <value>
                <fullName>Dépannage</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Mise en service</fullName>
            </value>
            <value>
                <fullName>Devis simple standard</fullName>
            </value>
            <value>
                <fullName>Contrat d&apos;assistance technique</fullName>
            </value>
            <value>
                <fullName>Devis complexe non standard</fullName>
            </value>
            <value>
                <fullName>Technique</fullName>
            </value>
            <value>
                <fullName>Commerciale</fullName>
            </value>
            <value>
                <fullName>Sécurité / Plan de prévention</fullName>
            </value>
            <value>
                <fullName>Comptable</fullName>
            </value>
            <value>
                <fullName>Livraison équipement</fullName>
            </value>
            <value>
                <fullName>Livraison PDR</fullName>
            </value>
            <value>
                <fullName>Suite intervention</fullName>
            </value>
            <value>
                <fullName>Appel en garantie</fullName>
            </value>
            <value>
                <fullName>Automatisme</fullName>
            </value>
            <value>
                <fullName>Chaudronnerie</fullName>
            </value>
            <value>
                <fullName>Electrique</fullName>
            </value>
            <value>
                <fullName>Instrumentation</fullName>
            </value>
            <value>
                <fullName>ElectroMécanique</fullName>
            </value>
            <value>
                <fullName>Autres</fullName>
            </value>
            <value>
                <fullName>Devis pièces</fullName>
            </value>
            <value>
                <fullName>Demande de service</fullName>
                <isActive>false</isActive>
                <label>Demande de service</label>
            </value>
            <value>
                <fullName>Demande nouveau matériel</fullName>
                <isActive>false</isActive>
                <label>Demande nouveau matériel</label>
            </value>
            <value>
                <fullName>Mise_en_service</fullName>
                <isActive>false</isActive>
                <label>Mise en service</label>
            </value>
            <value>
                <fullName>Panne Partielle</fullName>
                <isActive>false</isActive>
                <label>Panne Partielle</label>
            </value>
            <value>
                <fullName>Visite bilantaire</fullName>
                <isActive>false</isActive>
                <label>Visite bilantaire</label>
            </value>
            <value>
                <fullName>Visite plan de prévention</fullName>
                <isActive>false</isActive>
                <label>Visite plan de prévention</label>
            </value>
            <value>
                <fullName>Visite produit</fullName>
                <isActive>false</isActive>
                <label>Visite produit</label>
            </value>
            <value>
                <fullName>Visite périodique</fullName>
                <isActive>false</isActive>
                <label>Visite périodique</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>