force-app/main/default/objects/Case/fields/CASE_Anciennet__c.field-meta.xml
<CustomField>
    <fullName>CASE_Anciennet__c</fullName>
    <formula>IF(ISPICKVAL( Status ,&apos;résolu&apos;), (ClosedDate - CreatedDate),  (Now()- CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CASE_Ancienneté</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>