force-app/main/default/objects/Case/fields/CASE_Attribue_a__c.field-meta.xml
<CustomField>
    <fullName>CASE_Attribue_a__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attribué à :</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requetes</relationshipName>
    <type>Lookup</type>
</CustomField>