force-app/main/default/objects/Case/fields/CASE_TECH_AGENCE_REG_DU_COMPTE__c.field-meta.xml
<CustomField>
    <fullName>CASE_TECH_AGENCE_REG_DU_COMPTE__c</fullName>
    <formula>TEXT(Account.ACC_Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CASE_TECH_AGENCE_REG_DU_COMPTE</label>
    <type>Text</type>
</CustomField>