force-app/main/default/objects/Case/fields/CASE_TECH_RECURRENT__c.field-meta.xml
<CustomField>
    <fullName>CASE_TECH_RECURRENT__c</fullName>
    <formula>IF ( REQ_Recurrent__c = TRUE, &apos;Oui&apos;, &apos;Non&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CASE_TECH_RECURRENT</label>
    <type>Text</type>
</CustomField>