force-app/main/default/objects/Case/fields/CASE_TECH_REP_IN_SITU__c.field-meta.xml
<CustomField>
    <fullName>CASE_TECH_REP_IN_SITU__c</fullName>
    <formula>IF( REQ_Reparation_in_Situ__c = TRUE ,&apos;Oui&apos;,&apos;Non&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CASE_TECH_REP_IN_SITU</label>
    <type>Text</type>
</CustomField>