force-app/main/default/objects/Case/fields/CASE_Techstatut__c.field-meta.xml
<CustomField>
    <fullName>CASE_Techstatut__c</fullName>
    <formula>IF( ISPICKVAL( Status ,&apos;Résolu&apos;), 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CASE_Techstatut</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>