force-app/main/default/objects/Case/fields/REQ_Duree_de_la_reparation__c.field-meta.xml
<CustomField>
    <fullName>REQ_Duree_de_la_reparation__c</fullName>
    <inlineHelpText>Indiquer la durée de la réparation en minutes</inlineHelpText>
    <label>Durée de la réparation</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>