force-app/main/default/objects/Case/fields/REQ_Intervention_associee__c.field-meta.xml
<CustomField>
    <fullName>REQ_Intervention_associee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intervention associée</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Requêtes</relationshipLabel>
    <relationshipName>Requetes</relationshipName>
    <type>Lookup</type>
</CustomField>