force-app/main/default/objects/Case/fields/REQ_Recurrent__c.field-meta.xml
<CustomField>
    <fullName>REQ_Recurrent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indiquer si la non conformité est récurrente</inlineHelpText>
    <label>Récurrent</label>
    <type>Checkbox</type>
</CustomField>