force-app/main/default/objects/Case/fields/REQ_Reparation_in_Situ__c.field-meta.xml
<CustomField>
    <fullName>REQ_Reparation_in_Situ__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indiquer si la non conformité a été réparée sur place</inlineHelpText>
    <label>Réparation in Situ</label>
    <type>Checkbox</type>
</CustomField>