force-app/main/default/objects/Case/validationRules/RV_CASE_CAT_OU_CDE_PAS_LES_2.validationRule-meta.xml
<ValidationRule>
    <fullName>RV_CASE_CAT_OU_CDE_PAS_LES_2</fullName>
    <active>true</active>
    <description>Interdire la saisie d&apos;un numéro de contrat d&apos;assistance technique et un numéro de commande</description>
    <errorConditionFormula>AND(
     $User.USER_ByPassRegleValidation__c = FALSE
     ,$User.LastName != $Label.API
     ,(NOT(ISBLANK( CAS_ContratdeService__c ))
       &amp;&amp; 
       NOT(ISBLANK( CAS_Commande__c ))
       )
    )</errorConditionFormula>
    <errorDisplayField>CAS_Imputation__c</errorDisplayField>
    <errorMessage>Vous ne pouvez pas saisir un Contrat d&apos;assistance technique et une commande en même temps !   
Si vous avez choisi une imputation &quot;Sur contrat&quot; : Saisissez un numéro de contrat, sinon 
&quot;Sur commande&quot; : Saisissez un numéro de commande</errorMessage>
</ValidationRule>