force-app/main/default/objects/Case/validationRules/RV_CASE_IMP_SUR_COMMANDE.validationRule-meta.xml
<ValidationRule>
    <fullName>RV_CASE_IMP_SUR_COMMANDE</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
     $User.USER_ByPassRegleValidation__c = FALSE
    ,$User.LastName != $Label.API
    ,ISPICKVAL( CAS_Imputation__c ,&quot;Commande&quot;)
    ,ISBLANK( CAS_Commande__c )
   )</errorConditionFormula>
    <errorDisplayField>CAS_Commande__c</errorDisplayField>
    <errorMessage>Si l&apos;imputation est &quot;Sur commande&quot; vous devez renseigner un numéro de commande</errorMessage>
</ValidationRule>