force-app/main/default/objects/Case/validationRules/RV_CASE_IMPUTATION_OBLIG_SI_INTERVENTION.validationRule-meta.xml
<ValidationRule>
    <fullName>RV_CASE_IMPUTATION_OBLIG_SI_INTERVENTION</fullName>
    <active>true</active>
    <description>Obligation de saisir une imputation, si la nouvelle requête est de type intervention</description>
    <errorConditionFormula>AND(
      $User.USER_ByPassRegleValidation__c = FALSE
    , $User.LastName != $Label.API
    , ISPICKVAL(Type,&quot;Intervention&quot;)
    , ISBLANK (TEXT(CAS_Imputation__c))
   )</errorConditionFormula>
    <errorDisplayField>CAS_Imputation__c</errorDisplayField>
    <errorMessage>Vous devez saisir le type d&apos;imputation dans le cas d&apos;une intervention</errorMessage>
</ValidationRule>