force-app/main/default/objects/Case/listViews/Agence_Export_Case.listView-meta.xml
<ListView>
    <fullName>Agence_Export_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Agence Export</label>
    <queue>Agence_Export</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>