force-app/main/default/objects/Case/listViews/Agence_Nationale_Case.listView-meta.xml
<ListView>
    <fullName>Agence_Nationale_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Agence Nationale</label>
    <queue>Agence_Nationale</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>