force-app/main/default/objects/Case/listViews/Agence_Regionale_Centre_Paris_Nord_Case.listView-meta.xml
<ListView>
    <fullName>Agence_Regionale_Centre_Paris_Nord_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Agence Régionale Centre Paris-Nord</label>
    <queue>Agence_Regionale_Centre_Paris_Nord</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>