force-app/main/default/objects/Case/listViews/Agence_Regionale_Est_Case.listView-meta.xml
<ListView>
    <fullName>Agence_Regionale_Est_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Agence Régionale Est</label>
    <queue>Agence_Regionale_Est</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>