force-app/main/default/objects/Case/listViews/Agence_Regionale_Ouest_Case.listView-meta.xml
<ListView>
    <fullName>Agence_Regionale_Ouest_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Agence Régionale Ouest</label>
    <queue>Agence_Regionale_Ouest</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>