force-app/main/default/objects/Case/listViews/Equipe_requete_Sud_Ouest_Case.listView-meta.xml
<ListView>
    <fullName>Equipe_requete_Sud_Ouest_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Agence Régionale Sud-Ouest</label>
    <queue>Equipe_requete_Sud</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>