force-app/main/default/objects/Case/listViews/Mes_requ_tes_clotur_es.listView-meta.xml
<ListView>
    <fullName>Mes_requ_tes_clotur_es</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Fermé</value>
    </filters>
    <label>Mes requêtes cloturées</label>
</ListView>