force-app/main/default/objects/Case/listViews/Mes_requetes_ouvertes.listView-meta.xml
<ListView>
    <fullName>Mes_requetes_ouvertes</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.TYPE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Fermé</value>
    </filters>
    <label>Mes requêtes ouvertes</label>
</ListView>