force-app/main/default/objects/Case/listViews/REQ_Equipe_requete_Case.listView-meta.xml
<ListView>
    <fullName>REQ_Equipe_requete_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Agence Régionale Centre Paris-Nord</label>
    <queue>REQ_Equipe_requete_cpn</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>