force-app/main/default/objects/Case/listViews/Toutes_les_requ_tes_clotur_es.listView-meta.xml
<ListView>
    <fullName>Toutes_les_requ_tes_clotur_es</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.TYPE</columns>
    <columns>CAS_SousType__c</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Résolu,Fermé</value>
    </filters>
    <label>Toutes les requêtes clotûrées</label>
</ListView>